# tmp-server

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md
requests/: prompt.http
src/: main.rs
src/env/: config.rs  model.rs
src/firebs/: database.rs  mod.rs  model.rs
src/openai/: completion.rs  mod.rs  model.rs
src/server/: model.rs  services.rs
